# tratto-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_client.py
tratto/: __init__.py  _http.py  client.py  types.py
tratto/resources/: __init__.py  audiences.py  campaigns.py  contacts.py  domains.py  emails.py  templates.py  webhooks.py
