[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tratto-email"
version = "0.1.0"
description = "Tratto Python SDK — send transactional and marketing email"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tratto", email = "hello@tratto.email" }]
requires-python = ">=3.10"
keywords = ["email", "transactional", "tratto", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://tratto.email"
Repository = "https://github.com/tratto-email/tratto-python"
Documentation = "https://tratto.email/docs"
Issues = "https://github.com/tratto-email/tratto-python/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
